@@ -1,3 +1,9 @@
+2012-08-21  Romain Lenglet  <romain.lenglet@berabera.info
+
+	* src/omnifocus2agilezen.py (main): Modified the -p/--project
+	command-line option to take a numerical project ID instead of a
+	project name.
+
 2012-08-20  Romain Lenglet  <romain.lenglet@berabera.info>
 
 	* src/omnifocus2agilezen.py: Limit the cases where an AgileZen
